2010-01-14 16:09-EST Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSMenu.m: Change to UTF8String so that there isn't any 
	conversion problem when building the menu.

2010-01-13 15:57-EST Gregory John Casamento <greg.casamento@gmail.com>

	* GNUmakefile: Add file to makefile.
	* WinNSMenu.m: Add WinNSMenu category to implement native menus.

